// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSelectableMessage bordered is rendered 1`] = `
<div
  class="ouiText ouiText--extraSmall ouiSelectableMessage ouiSelectableMessage--bordered"
>
  <div
    class="ouiTextColor ouiTextColor--subdued"
  />
</div>
`;

exports[`OuiSelectableMessage is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiText ouiText--extraSmall ouiSelectableMessage testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiTextColor ouiTextColor--subdued"
  />
</div>
`;
